--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qusaieilouti99/nitro-notification-helpers",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "description": "nitro-notification-helpers",
   "main": "lib/index",
   "module": "lib/index",
@@ -59,17 +59,17 @@
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
-    "nitrogen": "0.29.4",
+    "nitrogen": "0.31.5",
     "prettier": "^3.3.3",
     "react": "19.0.0",
     "react-native": "0.78.2",
-    "react-native-nitro-modules": "0.29.4",
+    "react-native-nitro-modules": "0.31.5",
     "typescript": "^5.5.4"
   },
   "peerDependencies": {
     "react": "*",
     "react-native": "*",
-    "react-native-nitro-modules": "0.29.4"
+    "react-native-nitro-modules": "*"
   },
   "eslintConfig": {
     "root": true,
